# project2024

./: CMakeLists.txt  README.md
src/: CMakeLists.txt  main.cpp
src/data/: Interrogation.cpp  Interrogation.hpp  Result.cpp  Result.hpp
src/gui/: Interrogation.cpp  Interrogation.hpp  MainWindow.cpp  MainWindow.hpp  PreviousResult.cpp  PreviousResult.hpp
test_unit/: CMakeLists.txt
